Published multiple files

--- a/src/site/notes/7 Task/context/RPG/digital-garden/PL/01. Świat/01. Kosmologia/01. System/01. Planeta.md
+++ b/src/site/notes/7 Task/context/RPG/digital-garden/PL/01. Świat/01. Kosmologia/01. System/01. Planeta.md
@@ -4,7 +4,7 @@
 
 
 # Planeta
-Gdzieś, pośród nieskończonej pustki kosmosu krąży samotna planeta, znana mieszkańcom jako Amazja. Jest to świat jednej ziemi i wielu mórz, gdzie horyzont nigdy nie kończy się lądem, lecz zanika w bezkresnych falach. Jej cykl życia wyznaczają nie tylko wędrówki słońca, lecz także [[7 Task/context/RPG/digital-garden/PL/01. Świat/01. Kosmologia/01. System/02. Księżyce\|trzy księżyce]], których nierówny taniec rzeźbi pływy, wpływa na magię i kształtuje wierzenia ludów zamieszkujących ten świat.
+Gdzieś, pośród nieskończonej pustki kosmosu krąży samotna planeta, znana jej mieszkańcom jako Amazja. Jest to świat jednej ziemi i wielu mórz, gdzie horyzont nigdy nie kończy się lądem, lecz zanika w bezkresnych falach. Jej cykl życia wyznaczają nie tylko wędrówki słońca, lecz także [[7 Task/context/RPG/digital-garden/PL/01. Świat/01. Kosmologia/01. System/02. Księżyce\|trzy księżyce]], których nierówny taniec rzeźbi pływy, wpływa na magię i kształtuje wierzenia ludów zamieszkujących ten świat.
 
 <br/>
 <br/>
