--- a/src/site/notes/7 Task/context/RPG/digital-garden/PL/01. Świat/01. Kosmologia/02. Magia/01. Magia.md
+++ b/src/site/notes/7 Task/context/RPG/digital-garden/PL/01. Świat/01. Kosmologia/02. Magia/01. Magia.md
@@ -6,4 +6,6 @@
 # Magia
 > [!TIP] Moc pozwalająca manipulować rzeczywistością - materią, czasoprzestrzenią oraz świadomością.
 
-Trudno jest zdefiniować to, co większość nazywa "magią". Najczęściej porzuca się sztywne ramy definicji i mówi o "naturalnej sile", "wszechobecnej mocy" lub "nieuchwytnej energii przenikającej wszystko wokół". Siła ta może być pozyskana, ukształtowana lub ukierunkowana wedle woli i wykorzystana w dowolny sposób, gdzie limitem jest tylko wyobraźnia, umiejętności oraz potencjał użytkownika.
+Trudno jest zdefiniować to, co większość nazywa "magią". Najczęściej porzuca się sztywne ramy definicji i mówi o "naturalnej sile", "wszechobecnej energii" lub "mocy przenikającej wszystko wokół". Siła ta może być pozyskana, ukształtowana i ukierunkowana wedle woli oraz wykorzystana w dowolny sposób, gdzie limitem jest tylko wyobraźnia, umiejętności oraz potencjał użytkownika.
+
+> [!NOTE] Czytaj dalej: [[7 Task/context/RPG/digital-garden/PL/01. Świat/01. Kosmologia/02. Magia/02. Cztery Prawa Magii\|Zasady Magii]]
