Published multiple files

--- a/src/site/notes/7 Task/context/RPG/digital-garden/PL/01. Świat/01. Kosmologia/01. System/02. Księżyce.md
+++ b/src/site/notes/7 Task/context/RPG/digital-garden/PL/01. Świat/01. Kosmologia/01. System/02. Księżyce.md
@@ -4,14 +4,14 @@
 
 
 # Księżyce
-Wokół planety krążą 3 księżyce. Są one różnych rozmiarów, co sprawia, że orbity są nieregularne i chaotyczne. Ich istnienie i zachowanie miało, i nadal ma, ogromny wpływ na zachowania, wierzenia i kulturę mieszkańców kontynentu Amazji.
+Wokół planety krążą 3 księżyce. Są one różnych rozmiarów, co sprawia, że orbity są nieregularne i chaotyczne. Ich istnienie i zachowanie miało, i nadal ma, ogromny wpływ na działania, wierzenia i kulturę mieszkańców kontynentu Amazji.
 
 Księżyce najczęściej rozróżnia się po rozmiarze lub prędkości. To najpowszechniejszy sposób ich nazywania, choć istnieją dziesiątki różnych nazw, zależnych od regionu, wykształcenia, itd. Tradycja, religia, miejsce decydują, o tym jak ludzie nazywają księżyce. Generalnie - prości ludzie używają prostych nazw, religijni - przydomków bóstw przypisanych do każdego z księżyca, badacze - nazwy naukowe zapożyczone z języka elfickiego, itd.
 
 ### Mały Księżyc
 Symbol: ⊚
 Orbita: ok. 11 dni
-Najpopularniejsze nazwy: Mały, Szybki, Psotnik, Rozetka, Víre
+Najpopularniejsze nazwy: Mały, Szybki, Psotnik, Rozetka, Víre, Dancer
 
 ### Średni Księżyc
 Symbol: ⊖
