--- a/src/site/notes/7 Task/context/RPG/digital-garden/PL/01. Świat/02. Geografia/01. Kontynent/02. Największe miasta Amazji.md
+++ b/src/site/notes/7 Task/context/RPG/digital-garden/PL/01. Świat/02. Geografia/01. Kontynent/02. Największe miasta Amazji.md
@@ -4,4 +4,4 @@
 
 
 # Największe miasta Amazji
-![miasta.png](/img/user/7%20Task/context/RPG/7%20Worlds/762%20Amasia/7622%20Geography/76221%20World/files/miasta.png)
+![[miasta.png]]
