--- a/src/site/notes/7 Task/context/RPG/digital-garden/PL/01. Świat/01. Kosmologia/02. Magia/02. Cztery Prawa Magii.md
+++ b/src/site/notes/7 Task/context/RPG/digital-garden/PL/01. Świat/01. Kosmologia/02. Magia/02. Cztery Prawa Magii.md
@@ -6,14 +6,14 @@
 # Zasady Magii
 > [!TIP] Magia jest potencjałem świadomości. Sama wola (chęć, wiara) pozwala urzeczywistnić wyobrażenie lub intencję. Każda świadoma jednostka jest w stanie manipulować rzeczywistością. 
 
-## 1. Nie jest za darmo
+### 1. Nie jest za darmo
 Manipulacja rzeczywistością wiąże się z wysiłkiem (fizycznym, mentalnym) oraz przygotowaniami. Może zostać ułatwiona poprzez ćwiczenia, rytuały oraz fizyczne przedmioty.
 
-## 2. Magia zmienia rzeczywistość wedle woli
+### 2. Magia zmienia rzeczywistość wedle woli
 Nieważne czy zamiary użytkownika są celowe (np. chęć manipulowania ogniem), przypadkowe (złożyczenie) czy nieświadome (wiara, klątwy), magia zadziała zgodnie z jego wolą oraz siłą. Oczywiście, im bardziej skomplikowany jest cel, tym trudniejsze jest jego osiągnięcie - telepatia wymaga o wiele mniej wysiłku niż pirokineza.
 
-## 3. Świadomość to potencjał manipulacji
+### 3. Świadomość to potencjał manipulacji
 Im bardziej świadoma jednostka (tj. bardziej przygotowana, wyszkolona, działająca celowo, wierząca) tym jej magia jest silniejsza. Świadomość to miara intencjonalności.
 
-## 4. Silniejsza (także wspólna) świadomość to większy potencjał
+### 4. Silniejsza (także wspólna) świadomość to większy potencjał
 Doświadczony użytkownik (lub grupa ludzi mająca ten sam cel) jest w stanie osiągnąć o wiele więcej od pojedynczej intencji.
