--- a/src/site/notes/7 Task/context/RPG/digital-garden/PL/01. Świat/02. Geografia/01. Kontynent/01. Kontynent.md
+++ b/src/site/notes/7 Task/context/RPG/digital-garden/PL/01. Świat/02. Geografia/01. Kontynent/01. Kontynent.md
@@ -4,4 +4,4 @@
 
 
 # Geografia
-![geo.png](/img/user/7%20Task/context/RPG/7%20Worlds/762%20Amasia/7622%20Geography/76221%20World/files/geo.png)
+![[geo.png]]
